--- a/index.html
+++ b/index.html
@@ -1,30 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
+    <title>Frontend Mentor | QR code component</title>
 
-<body>
-  <div>
-  <img src="images/image-qr-code.png">
-  Improve your front-end skills by building projects
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        font-family: "Outfit", sans-serif;
+        background-color: hsl(212, 45%, 89%);
+      }
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/IvarsGetins">IvarsG</a>
-  </div>
-</body>
+      .qr {
+        background: white;
+        padding: 1.5rem;
+        border-radius: 1rem;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        margin: 1rem 0 0;
+        width: 80%;
+        max-width: 250px; /* for desktop */
+      }
+
+      .qr img {
+        width: 100%;
+        border-radius: 1rem;
+      }
+
+      h1 {
+        font-weight: 700;
+        color: hsl(218, 44%, 22%);
+        font-size: 18px;
+      }
+
+      p {
+        font-weight: 400;
+        color: hsl(216, 15%, 48%);
+        font-size: 15px;
+      }
+
+      .attribution {
+        margin-top: 1rem;
+        font-size: 0.75rem;
+        text-align: center;
+      }
+
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="qr">
+      <img
+        src="images/image-qr-code.png"
+        alt="QR code linking to Frontend Mentor"
+      />
+      <h1>Improve your front-end skills by building projects</h1>
+
+      <p>
+        Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the next level
+      </p>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/IvarsGetins">IvarsG</a>
+    </div>
+  </body>
 </html>
