--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
+  
     <link
       rel="icon"
       type="image/png"
@@ -15,61 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css">
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        font-family: "Outfit", sans-serif;
-        background-color: hsl(212, 45%, 89%);
-      }
-
-      .qr {
-        background: white;
-        padding: 1.5rem;
-        border-radius: 1rem;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        margin: 1rem 0 0;
-        width: 80%;
-        max-width: 250px; /* for desktop */
-      }
-
-      .qr img {
-        width: 100%;
-        border-radius: 1rem;
-      }
-
-      h1 {
-        font-weight: 700;
-        color: hsl(218, 44%, 22%);
-        font-size: 18px;
-      }
-
-      p {
-        font-weight: 400;
-        color: hsl(216, 15%, 48%);
-        font-size: 15px;
-      }
-
-      .attribution {
-        margin-top: 1rem;
-        font-size: 0.75rem;
-        text-align: center;
-      }
-
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
